Added support for soft-deletes on customers
