# mystore-core/src/main/java/net/andresbustamante/mystore/core/entities/Order.java
@@ -7,7 +7,6 @@ import java.util.List;
 
 import jakarta.persistence.Column;
 import jakarta.persistence.Entity;
-import jakarta.persistence.FetchType;
 import jakarta.persistence.ForeignKey;
 import jakarta.persistence.GeneratedValue;
 import jakarta.persistence.GenerationType;
@@ -17,6 +16,7 @@ import jakarta.persistence.ManyToOne;
 import jakarta.persistence.OneToMany;
 import jakarta.persistence.Table;
 import jakarta.validation.constraints.NotNull;
+
 import lombok.Getter;
 import lombok.Setter;
 
@@ -35,8 +35,7 @@ public class Order implements Serializable {
     @Column(name = "order_date")
     private LocalDate date;
 
-    @ManyToOne(fetch = FetchType.LAZY)
-    //@org.hibernate.annotations.OnDelete(action = org.hibernate.annotations.OnDeleteAction.SET_NULL)
+    @ManyToOne // No lazy fetch possible here because of the soft-delete configuration on Customer
     @JoinColumn(name = "customer_id", nullable = false, foreignKey = @ForeignKey(name = "fk_orders_customer"))
     private Customer customer;
 
